--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,9 @@
             <%= link_to "Home", "/", class: "nav-link" %>
           </li>
           <li class="nav-item">
+            <%= link_to "Books", books_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
             <%= link_to "Dasboard", dashboard_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
