--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -2,3 +2,4 @@
   <h4><%= book.title %></h4>
   <p><%= book.authors %></p>
   <p><%= book.description %></p>
+  <p>Owner: <%= book.current_owner.nickname %></>
