--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,33 +1,22 @@
 <h1>Hello <%= current_user.nickname %>, this is your Dashboard</h1>
 
-<h1>These are your books:</h1>
-
-<% @my_books.each do |item| %>
-
-  <%= cl_image_tag item.book.photo.key, crop: :fill %>
-  <p><%= item.book.title %></p>
-  <p><%= item.book.authors %></p>
-  <p><%= item.book.id %></p>
-  <p><%= item.book.description %></p>
-  <p>Current Owner: <%= item.user.nickname %></p>
-
-<% end %>
-
-<h1>These are your requests:</h1>
+<h1>Requests you made:</h1>
 
 <% @my_requests.each do |item| %>
+  <p>Request (<%= item.created_at.utc.getlocal.strftime("%F  %H:%M") %>)</p>
   <p><%= link_to item.book.title, item.book %> by <%= item.book.authors %> </p>
-  <p>owned by <%= item.book.current_owner.nickname %></p>
+  <p>requested from owner <%= item.history.user.nickname %></p>
   <p><%= item.status %></p>
   <p>- - -</p>
 <% end %>
 
 
-<h1>These are ingoing requests:</h1>
+<h1>Ingoing requests:</h1>
 
 <div data-controller="request-status">
-  <% @requests_made_to_me.each do |item| %>
+  <% @incoming_requests.each do |item| %>
     <div class='<%= item.status %>'>
+      <p>Request (<%= item.created_at.utc.getlocal.strftime("%F  %H:%M") %>) from <%= item.user.nickname %></p>
       <p><%= link_to item.book.title, item.book %> by <%= item.book.authors %> </p>
       <p>owned by <%= item.book.current_owner.nickname %></p>
       <p class='status'><%= item.status %></p>
@@ -37,3 +26,21 @@
     </div>
   <% end %>
 </div>
+
+<h1>Books you currently own:</h1>
+
+<% @my_books.each do |item| %>
+
+  <%= cl_image_tag item.book.photo.key, crop: :fill %>
+  <p><%= link_to item.book.title, item.book %> by <%= item.book.authors %> </p>
+  <p>Acquired on <%= item.date_acquired.utc.getlocal.strftime("%F  %H:%M") %></p>
+
+<% end %>
+
+<h1>Books you previously owned:</h1>
+<% @my_previously_owned_books.each do |item| %>
+  <%= cl_image_tag item.book.photo.key, crop: :fill %>
+  <p><%= link_to item.book.title, item.book %> by <%= item.book.authors %> </p>
+  <p>Acquired on <%= item.date_acquired.utc.getlocal.strftime("%F  %H:%M") %> and
+  swapped on <%= item.next_history.date_acquired.utc.getlocal.strftime("%F  %H:%M") %></p>
+<% end %>
