Add request link and chat

--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,4 +1,4 @@
-  <%= cl_image_tag book.photo.key, crop: :fill %>
+  <%= cl_image_tag book.photo.key, height: 145, crop: :fill %>
   <h4><%= book.title %></h4>
   <p><%= book.authors %></p>
   <p><%= book.description %></p>
