--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,39 +2,51 @@
 <%= render @book %>
 
 
-<% if @requests.exists? %>
-  <h2>Your requests</h2>
-  <ul>
-    <% @requests.each do |request| %>
-      <li><%= link_to request.created_at.strftime("%a %b %e at %l:%M %p"), request %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<% @book.histories.each do |item| %>
-  <p>
-    <%= item.user.nickname %> got this book on
-    <%= item.date_acquired.strftime("%F  %H:%M") %>
-  </p>
-<% end %>
-
-<%# check if current user is owner of the book %>
+<%# I AM THE CURRENT OWNER %>
 <% if @book.current_owner.id == current_user.id %>
-  <%= button_to "Destroy this book", @book, method: :delete %>
-  <%= link_to "Edit this book", edit_book_path(@book) %>
+  <p><%= link_to "Delete", @book, data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></p>
+  <p><%= link_to "Edit this book", edit_book_path(@book) %></p>
 <% else %>
-  <%# check if current user made a request already %>
-  <% if @requests_on_this_book.size != 0 %>
-    <% @requests_on_this_book.each do |item| %>
-      <div class="m-4">
-        <p>Current user <%= item.user.nickname %>, made a request with id <%= item.id %> and status <%= item.status %></p>
-        <p>Chat might go here</p>
-      </div>
-    <% end %>
-  <% else %>
+  <%# I AM NOT THE CURRENT OWNER %>
+  <%# DO I HAVE A PENDING REQUEST ON THIS BOOK?  %>
+  <% if !@pending_requests_made.exists? %>
     <%= button_to "Make a request", [@book, @request] %>
   <% end %>
-  <b>TO DO: Make sure current_user can only make one request.<br>
-    (Maybe it is already implied.)
-  </b>
+<% end %>
+
+<%# I AM THE CURRENT OWNER %>
+<% if @book.current_owner.id == current_user.id %>
+<%# AND I HAVE RECEIVED REQUESTS ON THIS BOOK %>
+  <% @incoming_requests.each do |item| %>
+    <div class="request">
+      <p>Request at <%= item.created_at.strftime("%F  %H:%M") %></p>
+      <p>status <%= item.status %></p>
+      <p><%= link_to "Chat with #{item.history.user.nickname}", item %></p>
+    </div>
+  <% end %>
+<% end %>
+
+<%# I HAVE MADE REQUESTS ON THIS BOOK %>
+<% if @requests.exists? %>
+  <% @requests.each do |item| %>
+    <div class="request">
+      <p>You made a request at <%= item.created_at.strftime("%F  %H:%M") %></p>
+      <p>status <%= item.status %></p>
+      <p><%= link_to "Chat with #{item.history.user.nickname}", item %></p>
+    </div>
+  <% end %>
+<% end %>
+
+
+<%# Book History %>
+<% if @book.histories.exists? %>
+  <div style="background-color: gray">
+    <h1>Book History</h1>
+    <% @book.histories.each do |item| %>
+      <p>
+        <%= item.user.nickname %> got this book on
+        <%= item.date_acquired.strftime("%F  %H:%M") %>
+      </p>
+    <% end %>
+  </div>
 <% end %>
