--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,10 @@
             <%= link_to "Books", books_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Dasboard", dashboard_path, class: "nav-link" %>
+            <%= link_to "New book", new_book_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Dashboard #{current_user.nickname}", dashboard_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
