add authorization and improve chat

--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -21,14 +21,14 @@
     width: 100%;
   }
 
-  // #new_message {
-  //   border-top: 1px solid $gray-200;
-  //   padding: 1rem;
+  #new_message {
+    border-top: 1px solid $gray-200;
+    padding: 1rem;
 
-  //   .form-group {
-  //     margin-bottom: 0;
-  //   }
-  // }
+    // .form-group {
+    //   margin-bottom: 0;
+    // }
+  }
 
   .message-info {
     opacity: 0.5;
