--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,5 +1,9 @@
 <div class="container chat">
-  <h1>Your request for <%= @request.book.title %></h1>
+  <% if current_user != @request.book.current_owner %>
+    <h1>Your request for <%= @request.book.title %></h1>
+  <% else %>
+    <h1> <%= @request.user.nickname %>'s request for <%= @request.book.title %></h1>
+  <% end %>
   <%= turbo_stream_from "request_#{@request.id}_messages" %>
   <div id="messages" class="messages">
     <% @request.messages.each do |message| %>
