--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,4 +1,4 @@
-<h1>Hello <%= current_user.nickname %>, this is your Dashboard</h1>
+<h1>Hello <%= current_user.nickname %>!</h1>
 
 <h1>Requests you made:</h1>
 
@@ -17,7 +17,7 @@
 <% end %>
 
 
-<h1>Ingoing requests(<%= @incoming_requests.length %>):</h1>
+<h1>Incoming requests (<%= @incoming_requests.length %>):</h1>
 
 <div data-controller="request-status">
   <% @incoming_requests.each do |item| %>
@@ -25,13 +25,8 @@
       <p>Request (<%= item.created_at.utc.getlocal.strftime("%F  %H:%M") %>) from <%= item.user.nickname %></p>
       <p><%= link_to item.book.title, item.book %> by <%= item.book.authors %> </p>
       <p>owned by <%= item.book.current_owner.nickname %></p>
-      <%# <p class='status'><%= item.status</p> %>
-      <p>
-        <%= link_to item.status, "/requests/#{item.id}", class: 'status' %>
-      </p>
-      <button class='btn-deny'data-action="request-status#send" data-request-status-action-param="deny" data-request-status-path-param="<%= request_deny_path(item) %>">Deny</button>
-      <button class='btn-approve' data-action="request-status#send" data-request-status-action-param="approve" data-request-status-path-param="<%= request_approve_path(item) %>">Swap!</button></td>
-      <p>- - -</p>
+
+      <%# link_to item.status, "/requests/#{item.id}", class: 'status' %>
 
       <p><%= link_to "Chat with #{item.user.nickname}", item %></p>
       <div class="status">
@@ -56,7 +51,7 @@
     <div class='book_item' data-book-id='<%= item.book.id %>'>
       <%= cl_image_tag item.book.photo.key, crop: :fill %>
       <p><%= link_to item.book.title, item.book %> by <%= item.book.authors %> </p>
-      <p>Acquired on <%= item.date_acquired.utc.getlocal.strftime("%F  %H:%M") %></p>
+      <div class="status">Acquired on <%= item.date_acquired.utc.getlocal.strftime("%F  %H:%M") %></div>
     </div>
   <% end %>
 </div>
@@ -68,8 +63,8 @@
     <div class='book_item' data-book-id='<%= item.book.id %>'>
       <%= cl_image_tag item.book.photo.key, crop: :fill %>
       <p><%= link_to item.book.title, item.book %> by <%= item.book.authors %> </p>
-      <p>Acquired on <%= item.date_acquired.utc.getlocal.strftime("%F  %H:%M") %> and
-      swapped on <%= item.next_history.date_acquired.utc.getlocal.strftime("%F  %H:%M") %></p>
+      <div class="status">Acquired on <%= item.date_acquired.utc.getlocal.strftime("%F  %H:%M") %> and
+      swapped on <%= item.next_history.date_acquired.utc.getlocal.strftime("%F  %H:%M") %></div>
     </div>
   <% end %>
 </div>
