--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,26 +11,24 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "/", class: "nav-link" %>
-          </li>
           <li class="nav-item">
             <%= link_to "Books", books_path, class: "nav-link" %>
+          </li>
+          <li>
+            <%= link_to "Add a book", new_book_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <% @incoming_requests = Request.joins(history: :user).where("history.user_id": current_user.id).order("id DESC") %>
             <% if @incoming_requests.empty? %>
               <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
             <% else %>
-              <%= link_to "Dashboard(#{@incoming_requests.length})", dashboard_path, class: "nav-link" %>
+              <%= link_to "Dashboard (#{@incoming_requests.length})", dashboard_path, class: "nav-link" %>
             <% end %>
-
-            <%= link_to "New book", new_book_path, class: "nav-link" %>
           </li>
-         
+
           <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
+          <a href="#" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="nav-link"><%= current_user.nickname %></span>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
