added user sign up location

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,6 +12,7 @@
 
     <%= f.input :username %>
     <%= f.input :nickname %>
+    <%= f.input :location, label: 'Address' %>
 
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
