improve seed and show page

--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,6 +1,6 @@
-  <%= cl_image_tag book.photo.key, height: 145, crop: :fill %>
+  <%= cl_image_tag book.photos.first.key, height: 145, crop: :fill %>
   <h4><%= book.title %></h4>
   <p><%= book.authors %></p>
   <p><%= book.description %></p>
   <p>Current owner: <%= book.current_owner.nickname %></p>
-  <p>about <%= book.current_owner.distance_to(current_user).round(1) %> km away</p>
+  <p>about <%= book.current_owner.distance_to(current_user).to_f.round(1) %> km away</p>
