--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,6 +25,9 @@
               <%= link_to "Dashboard (#{@incoming_requests.length})", dashboard_path, class: "nav-link" %>
             <% end %>
           </li>
+          <li class="nav-item">
+            <%= link_to "Map", user_path(current_user), class: "nav-link" %>
+          </li>
 
           <li class="nav-item dropdown">
           <a href="#" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
