--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,11 @@
-<h4>Edit <%= @book.title %></h4>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-sm-8">
+      <h4>Edit <%= @book.title %></h4>
 
-<%= render "form", book: @book %>
+      <%= render "form", book: @book %>
 
-<p>Back to <%= link_to @book.title, book_path(@book) %></p>
+      <p>Back to <%= link_to @book.title, book_path(@book) %></p>
+    </div>
+  </div>
+</div>
