--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,11 @@
-<h4>Create a book</h4>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-sm-8">
+      <h4>Create a book</h4>
 
-<%= render "form", book: @book %>
+      <%= render "form", book: @book %>
 
-<p><%= link_to "All books", books_path %></p>
+      <p><%= link_to "All books", books_path %></p>
+    </div>
+  </div>
+</div>
