--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,11 @@
 @import "components/index";
 @import "pages/index";
 
+@import "pages/login";
+
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
+
+
+body {
+  background-color: $background-color;
+}
