--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+@import "config/general";
 
 // External libraries
 @import "bootstrap";
@@ -14,11 +15,3 @@
 @import "pages/login";
 
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
-
-
-body {
-  background-color: $background-color;
-}
-.mapboxgl-marker {
-  cursor: pointer;
-}
