--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,15 +17,11 @@
         <% else %>
           <p><%= @user.nickname %></p>
         <% end %>
-        <p><%= @user.distance_to(current_user).to_f.round(1) %> km</p>
       </div>
 
-      <div>
+      <div class="map_books_container">
         <% @books_from_user.each do |item| %>
-          <div class='book_item' data-book-id='<%= item.book.id %>'>
-            <%= cl_image_tag item.book.photos.first.key, crop: :fill %>
-            <p><%= link_to item.book.title, item.book %> by <%= item.book.authors %> </p>
-          </div>
+          <%= render "shared/book", book: item.book %>
         <% end %>
       </div>
 
