--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -9,12 +9,11 @@
   <div class="right-pane">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-sm-8">
-          <h4>Create a book</h4>
+        <div class="col-sm-9">
+          <p>Add a book</p>
 
           <%= render "form", book: @book %>
 
-          <p><%= link_to "All books", books_path %></p>
         </div>
       </div>
     </div>
