--- a/app/assets/stylesheets/components/_book.scss
+++ b/app/assets/stylesheets/components/_book.scss
@@ -1,4 +1,5 @@
 .book_card {
+  container: book_card / inline-size;
   aspect-ratio: 3/4;
   background-color: aqua;
   width: 100%;
@@ -45,19 +46,22 @@
   }
   .author {
     flex-shrink: 0;
+    margin-bottom: .3em;
   }
   .title {
     font-family: Instrument, Times, serif;
-    font-size: 3rem;
+    font-size: 20cqw;
     line-height: 1;
     flex-shrink: 1;
-    // overflow: hidden;
-    // text-overflow: ellipsis;
     display: inline-block;
     width: 100%;
+    hyphens: auto;
   }
 }
 .caption {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+  a {
+    text-decoration: none;
+  }
 }
