--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -1,8 +1,7 @@
 // Find split Layout for this page in components _split_layout.scss
 
-
 .right-pane {
-  padding: 2rem; /* Add some padding for better layout */
+  // padding: 2rem; /* Add some padding for better layout */
   display: flex; /* Center the form */
   flex-direction: column;
   justify-content: center;
@@ -13,5 +12,5 @@
 }
 
 .btn-primary {
-  width: 100%; /* Make the button stretch across the form */
+  // width: 100%; /* Make the button stretch across the form */
 }
