--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-2">
   <div class="row justify-content-center">
     <div class="col-sm-8">
       <h4>Edit <%= @book.title %></h4>
