--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container mt-2">
   <div class="row justify-content-center">
     <div class="col-sm-8">
-      <h4>Create a book</h4>
+      <h4>Create a book <small><i class="fa-solid fa-book-open text-danger"></i><small></h4>
 
       <%= render "form", book: @book %>
 
