--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,11 +19,12 @@
           </li>
           <li class="nav-item">
             <% @incoming_requests = Request.joins(history: :user).where("history.user_id": current_user.id).order("id DESC") %>
-            <% if @incoming_requests.empty? %>
-              <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
-            <% else %>
-              <%= link_to "Dashboard (#{@incoming_requests.length})", dashboard_path, class: "nav-link" %>
-            <% end %>
+            <% @pending_requests = @incoming_requests.select { |request| request.status == "pending" } %>
+              <% if @pending_requests.empty? %>
+                <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
+              <% else %>
+                <%= link_to "Dashboard (#{@pending_requests.length})", dashboard_path, class: "nav-link" %>
+              <% end %>
           </li>
           <li class="nav-item">
             <%= link_to "Map", user_path(current_user), class: "nav-link" %>
