--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 
 // Your CSS partials
 @import "components/index";
+@import "components/history_card";
 @import "pages/index";
 
 @import "pages/login";
